# serializer version: 1
# name: test_config_flow[create]
  FlowResultSnapshot({
    'result': ConfigEntrySnapshot({
      'title': 'My hygrostat',
    }),
    'title': 'My hygrostat',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
  })
# ---
# name: test_config_flow[init]
  FlowResultSnapshot({
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_options[create_entry]
  FlowResultSnapshot({
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
  })
# ---
# name: test_options[dehumidifier]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <HumidifierEntityStateAttribute.ACTION: 'action'>: <HumidifierAction.OFF: 'off'>,
      <HumidifierEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 10.0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'dehumidifier',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My hygrostat',
      <HumidifierEntityStateAttribute.HUMIDITY: 'humidity'>: 100,
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 100,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <HumidifierEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.my_hygrostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_options[humidifier]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <HumidifierEntityStateAttribute.ACTION: 'action'>: <HumidifierAction.OFF: 'off'>,
      <HumidifierEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 10.0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidifier',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My hygrostat',
      <HumidifierEntityStateAttribute.HUMIDITY: 'humidity'>: 100,
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 100,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <HumidifierEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.my_hygrostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_options[init]
  FlowResultSnapshot({
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
